# ntfstl

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/ntf/: buffer.hpp  concepts.hpp  core.hpp  expected.hpp  fixed_freelist.hpp  freelist.hpp  func.hpp  func_util.hpp  function.hpp  macro.hpp  memory.hpp  optional.hpp  ref.hpp  span.hpp  string.hpp  threadpool.hpp  triv_fn.hpp  unique.hpp  unique_array.hpp
include/ntf/impl/: concepts.hpp  core.hpp  erasure.hpp  iterator.hpp  macro.h
include/ntfstl/: allocator.hpp  any.hpp  arena.hpp  concepts.hpp  core.hpp  error.hpp  expected.hpp  freelist.hpp  function.hpp  hashmap.hpp  logger.hpp  memory.hpp  memory_pool.hpp  meta.hpp  optional.hpp  ptr.hpp  singleton.hpp  span.hpp  sparse_set.hpp  task.hpp  test.hpp  threadpool.hpp  types.hpp  unique_array.hpp  utility.hpp  vector.hpp  version.hpp.in
script/: run_tests.sh
src/: arena.cpp  logger.cpp  memory.cpp  memory_pool.cpp
test/: CMakeLists.txt
test/src/: core.cpp  expected.cpp  freelist.cpp  func.cpp  function.cpp  hashmap.cpp  memory.cpp  memory_pool.cpp  optional.cpp  ref.cpp  span.cpp  sparse_set.cpp  string.cpp  stringbuf.cpp  test.cpp  triv_fn.cpp  unique.cpp  unique_array.cpp  utility.cpp
